--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +172,7 @@
        "4  20181024_d1_0830_0900_4         5  Motorcycle             138.01  24.841425"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -217,92 +208,73 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>unique_id</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>lon_acc</th>\n",
-       "      <th>lat_acc</th>\n",
-       "      <th>time</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>veh_type</th>\n",
+       "      <th>traveled_distance</th>\n",
+       "      <th>avg_speed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>20181024_d1_0830_0900_0</td>\n",
-       "      <td>37.977391</td>\n",
-       "      <td>23.737688</td>\n",
-       "      <td>4.9178</td>\n",
-       "      <td>0.0518</td>\n",
-       "      <td>-0.0299</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Car</td>\n",
+       "      <td>48.85</td>\n",
+       "      <td>9.770344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20181024_d1_0830_0900_0</td>\n",
-       "      <td>37.977391</td>\n",
-       "      <td>23.737688</td>\n",
-       "      <td>4.9207</td>\n",
-       "      <td>-0.0124</td>\n",
-       "      <td>-0.0354</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>20181024_d1_0830_0900_1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>98.09</td>\n",
+       "      <td>19.839417</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20181024_d1_0830_0900_0</td>\n",
-       "      <td>37.977391</td>\n",
-       "      <td>23.737688</td>\n",
-       "      <td>4.9160</td>\n",
-       "      <td>-0.0519</td>\n",
-       "      <td>-0.0413</td>\n",
-       "      <td>0.08</td>\n",
+       "      <td>20181024_d1_0830_0900_2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>63.80</td>\n",
+       "      <td>18.228752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20181024_d1_0830_0900_0</td>\n",
-       "      <td>37.977390</td>\n",
-       "      <td>23.737688</td>\n",
-       "      <td>4.9057</td>\n",
-       "      <td>-0.0914</td>\n",
-       "      <td>-0.0478</td>\n",
-       "      <td>0.12</td>\n",
+       "      <td>20181024_d1_0830_0900_3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>145.72</td>\n",
+       "      <td>26.229014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20181024_d1_0830_0900_0</td>\n",
-       "      <td>37.977390</td>\n",
-       "      <td>23.737689</td>\n",
-       "      <td>4.8871</td>\n",
-       "      <td>-0.1679</td>\n",
-       "      <td>-0.0550</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>20181024_d1_0830_0900_4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>138.01</td>\n",
+       "      <td>24.841425</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 unique_id        lat        lon   speed  lon_acc  lat_acc  \\\n",
-       "0  20181024_d1_0830_0900_0  37.977391  23.737688  4.9178   0.0518  -0.0299   \n",
-       "1  20181024_d1_0830_0900_0  37.977391  23.737688  4.9207  -0.0124  -0.0354   \n",
-       "2  20181024_d1_0830_0900_0  37.977391  23.737688  4.9160  -0.0519  -0.0413   \n",
-       "3  20181024_d1_0830_0900_0  37.977390  23.737688  4.9057  -0.0914  -0.0478   \n",
-       "4  20181024_d1_0830_0900_0  37.977390  23.737689  4.8871  -0.1679  -0.0550   \n",
-       "\n",
-       "   time  \n",
-       "0  0.00  \n",
-       "1  0.04  \n",
-       "2  0.08  \n",
-       "3  0.12  \n",
-       "4  0.16  "
+       "                 unique_id  track_id    veh_type  traveled_distance  avg_speed\n",
+       "0  20181024_d1_0830_0900_0         1         Car              48.85   9.770344\n",
+       "1  20181024_d1_0830_0900_1         2  Motorcycle              98.09  19.839417\n",
+       "2  20181024_d1_0830_0900_2         3  Motorcycle              63.80  18.228752\n",
+       "3  20181024_d1_0830_0900_3         4  Motorcycle             145.72  26.229014\n",
+       "4  20181024_d1_0830_0900_4         5  Motorcycle             138.01  24.841425"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trajectories_df.head()"
+    "vehicle_df.head()"
    ]
   },
   {
